[package]
name = "maze-solver"
version = "0.1.0"
authors = ["Alex Ionescu <alxi.2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
timed-proc-macro = { path = "timed-proc-macro" }

[features]
show-timings = []

default = ["show-timings"]
