[package]
name = "maze-solver"
version = "0.1.0"
authors = ["Alex Ionescu <alxi.2001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
timed-proc-macro = { path = "timed-proc-macro", default-features = false }

[features]
show-timings = ["timed-proc-macro/enabled"]

default = ["show-timings"]
